<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LED테스트</string>
    <string name="action_settings">Settings</string>
    <string name="led_label">LED</string>
    <string name="r">R</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="off">Off</string>
    <string name="auto">자동</string>
    <string name="bright">밝기</string>
</resources>
